removed more commented-out code, fixed /active route dark mode

--- a/src/styles/tasks.module.scss
+++ b/src/styles/tasks.module.scss
@@ -1,3 +1,4 @@
+@use "./themes";
 .container {
   display: flex;
   flex-direction: column;
@@ -12,9 +13,12 @@
   width: auto;
   font-size: 3.5rem;
   font-weight: bold;
-  color: #041484;
   border: none;
   text-transform: capitalize;
+  
+  @include themes.theme() {
+    color: themes.theme-get('colorText');
+  }
 
   &:focus {
     outline: none;
